add entities intermediate substructures: Note, UpdateNoteInfo
