# internal/app/api/note_v1/update_note.go
@@ -9,7 +9,7 @@ import (
 )
 
 func (n *Note) Update(ctx context.Context, req *desc.UpdateNoteRequest) (*emptypb.Empty, error) {
-	err := n.noteService.UpdateNote(ctx, converter.ToUpdateNoteRequest(req))
+	err := n.noteService.UpdateNote(ctx, req.GetId(), converter.ToUpdateNoteInfo(req.UpdateNoteInfo))
 	if err != nil {
 		return &emptypb.Empty{}, err
 	}
